--- a/package.json
+++ b/package.json
@@ -18,17 +18,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.0.0",
-    "fastify-plugin": "^4.0.0",
     "@fastify/autoload": "^5.0.0",
     "@fastify/sensible": "^5.0.0",
-    "fastify-cli": "^6.1.0"
+    "fastify": "^4.0.0",
+    "fastify-cli": "^6.1.0",
+    "fastify-plugin": "^4.0.0",
+    "reflect-metadata": "^0.2.1",
+    "typedi": "^0.10.0"
   },
   "devDependencies": {
     "@types/node": "^20.4.4",
-    "ts-node": "^10.4.0",
     "concurrently": "^8.2.2",
     "fastify-tsconfig": "^2.0.0",
+    "ts-node": "^10.4.0",
     "typescript": "^5.2.2"
   }
 }
